# taskodrill

./: .gitignore  Procfile  README.md  SECURITY.md  main.py  manage.py  pyproject.toml  requirements.txt  setup.cfg
.github/: dependabot.yml  security-policy.md
.github/workflows/: codeql-analysis.yml
doc/: taskodrill.vpp  taskodrill.vpp.bak_001d  taskodrill.vpp.bak_002d  taskodrill.vpp.bak_003d  taskodrill.vpp.bak_004d
myauth/: forms.py  models.py  tests.py  urls.py  views.py
myauth/migrations/: 0001_initial.py  0002_auto_20210331_1045.py  0003_myuserprofile.py  0004_create_user_profiles.py  0005_auto_20250228_1119.py  0006_auto_20250715_1226.py  0007_auto_20250727_1703.py  0008_auto_20250731_1131.py  0009_auto_20250731_1250.py  0010_auto_20250812_0816.py  0011_auto_20250812_0904.py  0012_auto_20250928_0942.py  0013_alter_myuser_id_alter_myuserprofile_id_and_more.py  0014_alter_myuserprofile_timezone.py  0015_alter_myuserprofile_timezone.py
myauth/templates/: signup.html
pages/: views.py
pages/templates/: home.html  instructions.html  pricing.html
taskodrill/: asgi.py  settings-dev.py  settings-pro.py  settings.py  urls.py  wsgi.py
tasks/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/api/: auth.py  filters.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_project.py  0003_task_project.py  0004_auto_20200724_1928.py  0005_context.py  0006_task_contexts.py  0011_project_status.py  (+34 more)
templates/: base-home.html  base-login.html  base.html
votes/: models.py  urls.py  views.py
(+61 files in other folders)
